# Raduly_Adrienn

./: CMakeLists.txt
labs/lab_01/: CMakeLists.txt  functions.c  functions.h  main.c
labs/lab_02/: CMakeLists.txt  main.c  utils.c  utils.h
labs/lab_03/: CMakeLists.txt  main.c  student.c  student.h
labs/lab_04/: CMakeLists.txt  array.c  array.h  main.c
labs/lab_05/: CMakeLists.txt  constants.h  stack.c  stack.h
